--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
